Fixed graphical flickering.
Fixed graphical flickering, added/removed some other minor features.
This also decreased the amount of downloaded content, since the browser no longer has to download each image every time they're changed.
This works due to a new caching system that downloads images once they're first seen into localstorage. You can clear the cache with the new "Clear cache" button.

--- a/style.css
+++ b/style.css
@@ -102,15 +102,22 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 #extrasOpenClose {
-    position: fixed;
-    height: 75vh;
-    display: flex;
-    align-items: center;
-    left: 3px;
-    cursor: pointer;
-    width: 4%;
-    border-radius: 999px;
+  position: fixed;
+  height: 75vh;
+  display: flex;
+  align-items: center;
+  left: 3px;
+  cursor: pointer;
+  width: 4%;
+  border-radius: 999px;
 }
 #extrasOpenClose:hover {
-    background-color: #00000079;
+  background-color: #00000079;
+}
+#clearCache {
+  background-color: rgb(0, 255, 0);
+  color: white;
+  border-radius: 999px;
+  border: none;
+  cursor: pointer;
 }
